--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <h1>My App with Styles and Scripts</h1>
-    <script src="app.js"></script>
+    <script src="app.js">
+    </script>
+    <p>Hello World!</p>
 </body>
 </html>
